--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "eslint": "^8.14.0"
   },
   "dependencies": {
-    "discord.js": "^13.6.0"
+    "@discordjs/builders": "^0.13.0",
+    "@discordjs/rest": "^0.4.1",
+    "discord-api-types": "^0.32.0",
+    "discord.js": "^13.6.0",
+    "node-fetch": "^2.6.7"
   }
 }
