Add path for skeleton used to create new commands
Doesn't actually do anyting so don't want this included in git

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 node_modules
 config.json
+# Boilerplate file to copy/paste when creating new commands
+# Doesn't actually do anything so shouldn't be included in repo
+tools/boilerplate.js
