--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules
 config.json
+.env
 # Boilerplate file to copy/paste when creating new commands
 # Doesn't actually do anything so shouldn't be included in repo
 tools/boilerplate.js
