--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@discordjs/rest": "^0.4.1",
     "discord-api-types": "^0.32.0",
     "discord.js": "^13.6.0",
+    "dotenv": "^16.0.1",
     "node-fetch": "^2.6.7"
   }
 }
