--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# Discord Bot Connection info
 CLIENT_ID=client_id_here
 GUILD_ID=guild_id_here
 TOKEN=secret_token_here
+
+# Backend/API Server urls
+BASE_URL=https://link-to-your-server.herokuapp.com/
+API_URL=https://link-to-your-server.herokuapp.com/api/
